Update Helm chart repository

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "python_version": "3.8",
   "app_directory": "/app",
   "container_name": "kubernetes-container",
-  "ports": ["10001:10001", "8081:8081", "10002:10002", "81:81", "80:80"],
+  "ports": ["10001:10001", "8081:8081", "10002:10002", "81:81", "80:80", "9000:9000", "8080:8080", "8443:8443", "9090:9090", "8001:8001" ],
   "volumes": ["./app_data:/app", "/var/run/docker.sock:/var/run/docker.sock"],
   "command": ["sh", "-c", "while :; do sleep 10; done"],
   "image": "vamshionrails/kubernetes:v1"
